--- a/Projects/Pb5_Rainfall data analysis of TN/Code_Files/2024 Rain data html to csv.ipynb
+++ b/Projects/Pb5_Rainfall data analysis of TN/Code_Files/2024 Rain data html to csv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 66,
    "id": "fb882b7c-8eb3-4d59-8c75-d30d75a5b2ca",
    "metadata": {
     "scrolled": true
@@ -12,7 +12,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_1824\\142700215.py:30: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_3260\\142700215.py:30: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if df.iloc[0][4].date() != df1.loc[len(df1)-1][4].date():\n"
      ]
     },
@@ -54,60 +54,68 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2193</th>\n",
+       "      <th>7570</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Ramanathapuram</td>\n",
-       "      <td>Kamuthi</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>2024-04-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2194</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Ramanathapuram</td>\n",
-       "      <td>Vallinokam</td>\n",
+       "      <td>The Nilgiris</td>\n",
+       "      <td>Harisan Malayalam Ltd. Went worth Estate Cher</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>2024-04-01</td>\n",
+       "      <td>2024-05-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2195</th>\n",
+       "      <th>7571</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Sivagangai</td>\n",
-       "      <td>Sivagangai</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2024-04-01</td>\n",
+       "      <td>Theni</td>\n",
+       "      <td>Periyar</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2024-05-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2196</th>\n",
+       "      <th>7572</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Thiruvarur</td>\n",
-       "      <td>Needamangalam</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>2024-04-01</td>\n",
+       "      <td>Thoothukudi</td>\n",
+       "      <td>Kadalkudi</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2024-05-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2197</th>\n",
+       "      <th>7573</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Thiruvarur</td>\n",
-       "      <td>Pandavaiyaru</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2024-04-01</td>\n",
+       "      <td>Tirupathur</td>\n",
+       "      <td>Taluk Office, Tirupathur</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2024-05-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7574</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Vellore</td>\n",
+       "      <td>VCS Mill Ammundi</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2024-05-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dept            dist        station  value       date\n",
-       "id                                                            \n",
-       "2193  Revenue  Ramanathapuram        Kamuthi    8.0 2024-04-01\n",
-       "2194  Revenue  Ramanathapuram     Vallinokam    2.0 2024-04-01\n",
-       "2195  Revenue      Sivagangai     Sivagangai    1.0 2024-04-01\n",
-       "2196  Revenue      Thiruvarur  Needamangalam   18.0 2024-04-01\n",
-       "2197  Revenue      Thiruvarur   Pandavaiyaru    7.0 2024-04-01"
+       "         dept          dist                                        station  \\\n",
+       "id                                                                           \n",
+       "7570  Revenue  The Nilgiris  Harisan Malayalam Ltd. Went worth Estate Cher   \n",
+       "7571  Revenue         Theni                                        Periyar   \n",
+       "7572  Revenue   Thoothukudi                                      Kadalkudi   \n",
+       "7573  Revenue    Tirupathur                       Taluk Office, Tirupathur   \n",
+       "7574  Revenue       Vellore                               VCS Mill Ammundi   \n",
+       "\n",
+       "      value       date  \n",
+       "id                      \n",
+       "7570    2.0 2024-05-31  \n",
+       "7571    3.0 2024-05-31  \n",
+       "7572    3.0 2024-05-31  \n",
+       "7573   36.0 2024-05-31  \n",
+       "7574    9.0 2024-05-31  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,17 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 21,
    "id": "6bcd6c9e-a08a-4c35-a0f6-26f9c1802e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Date = '31-03-2024'"
+    "Date = '18-04-2024'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 22,
    "id": "1f3da3f2-bee7-4352-b6d4-4d4df7797459",
    "metadata": {},
    "outputs": [
@@ -180,7 +188,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_1824\\1117541723.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_3260\\1117541723.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if df.iloc[0][4] != df1.loc[len(df1)-1][4]:\n"
      ]
     },
@@ -222,60 +230,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2186</th>\n",
+       "      <th>2585</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Thoothukudi</td>\n",
-       "      <td>TUTICORIN</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>2024-03-29</td>\n",
+       "      <td>Tenkasi</td>\n",
+       "      <td>Shencottai</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2024-04-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2187</th>\n",
+       "      <th>2586</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Thoothukudi</td>\n",
-       "      <td>Kayalpattinam</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>2024-03-29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2188</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Kanniyakumari</td>\n",
-       "      <td>Eraniel</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>2024-03-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2189</th>\n",
-       "      <td>Revenue</td>\n",
-       "      <td>Kanniyakumari</td>\n",
-       "      <td>Colachel</td>\n",
+       "      <td>Tirunelveli</td>\n",
+       "      <td>Servalar Dam</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>2024-03-30</td>\n",
+       "      <td>2024-04-17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2190</th>\n",
+       "      <th>2587</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Tirunelveli</td>\n",
+       "      <td>Kannadian Anicut</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2024-04-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2588</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Tirunelveli</td>\n",
+       "      <td>Manimutharu</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2024-04-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2589</th>\n",
        "      <td>All</td>\n",
        "      <td>All</td>\n",
        "      <td>All</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>2024-03-31</td>\n",
+       "      <td>2024-04-18</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dept           dist        station  value       date\n",
-       "id                                                           \n",
-       "2186  Revenue    Thoothukudi      TUTICORIN   40.0 2024-03-29\n",
-       "2187  Revenue    Thoothukudi  Kayalpattinam   28.0 2024-03-29\n",
-       "2188  Revenue  Kanniyakumari        Eraniel   16.0 2024-03-30\n",
-       "2189  Revenue  Kanniyakumari       Colachel   13.0 2024-03-30\n",
-       "2190      All            All            All    0.0 2024-03-31"
+       "         dept         dist           station  value       date\n",
+       "id                                                            \n",
+       "2585  Revenue      Tenkasi        Shencottai    1.0 2024-04-17\n",
+       "2586  Revenue  Tirunelveli      Servalar Dam   13.0 2024-04-17\n",
+       "2587  Revenue  Tirunelveli  Kannadian Anicut    2.0 2024-04-17\n",
+       "2588  Revenue  Tirunelveli       Manimutharu    1.0 2024-04-17\n",
+       "2589      All          All               All    0.0 2024-04-18"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
