--- a/Projects/Pb5_Rainfall data analysis of TN/Automate Web Scrab/Automating Data Retrieval from the Web with Selenium.ipynb
+++ b/Projects/Pb5_Rainfall data analysis of TN/Automate Web Scrab/Automating Data Retrieval from the Web with Selenium.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "id": "31a37f30-412a-44bc-8f30-2b62f322849f",
    "metadata": {},
    "outputs": [
@@ -35,46 +35,36 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "<class 'str'> 01-01-2024\n",
-      "<class 'str'> 10-01-2024\n"
+      "<class 'str'> 01-01-2025\n",
+      "<class 'str'> 13-01-2025\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:153: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  A.loc[B.index] = C\n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:153: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  Search_Rain_Fall_Data = pd.concat([Search_Rain_Fall_Data,df3])\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:127: SettingWithCopyWarning: \n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:115: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = D.copy()\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:127: SettingWithCopyWarning: \n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:127: SettingWithCopyWarning: \n",
+      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_4612\\1336419519.py:127: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:127: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = C\n",
-      "C:\\Users\\Arunprakash Babu\\AppData\\Local\\Temp\\ipykernel_11260\\1336419519.py:115: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  A.loc[B.index] = D.copy()\n"
+      "  A.loc[B.index] = C\n"
      ]
     },
     {
@@ -117,42 +107,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Tenkasi</td>\n",
-       "      <td>Gadana dam Section</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2024-01-01</td>\n",
+       "      <td>Kanniyakumari</td>\n",
+       "      <td>Suralacode</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>2025-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Tenkasi</td>\n",
-       "      <td>Karuppanadhi Dam section</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2024-01-01</td>\n",
+       "      <td>Kanniyakumari</td>\n",
+       "      <td>Aralvaimozhi</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2025-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Tirunelveli</td>\n",
-       "      <td>Oothu</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>2024-01-01</td>\n",
+       "      <td>Nagapattinam</td>\n",
+       "      <td>Vedaranyam</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>2025-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Tirunelveli</td>\n",
-       "      <td>Nalumukku</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2024-01-01</td>\n",
+       "      <td>Nagapattinam</td>\n",
+       "      <td>Kodiayakarai</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2025-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Tirunelveli</td>\n",
-       "      <td>Manjolai</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2024-01-01</td>\n",
+       "      <td>Ramanathapuram</td>\n",
+       "      <td>Thangachimadam</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>2025-01-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -163,69 +153,69 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1541</th>\n",
+       "      <th>223</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2024-01-10</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>Thamaraipakkam</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1542</th>\n",
+       "      <th>224</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>Sivakasi RDO office</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>2024-01-10</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1543</th>\n",
+       "      <th>225</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>Rajapalayam</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-01-10</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>RSCL-2 Koliyanur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1544</th>\n",
+       "      <th>226</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>Kariyapatti</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2024-01-10</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>RSCL-2 Valavanur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1545</th>\n",
+       "      <th>227</th>\n",
        "      <td>Revenue</td>\n",
-       "      <td>Virudhunagar</td>\n",
-       "      <td>Vembakottai Dam</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2024-01-10</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>Marakkanam</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1546 rows × 5 columns</p>\n",
+       "<p>228 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         dept          dist                   station  value       date\n",
-       "id                                                                     \n",
-       "0     Revenue       Tenkasi        Gadana dam Section    6.0 2024-01-01\n",
-       "1     Revenue       Tenkasi  Karuppanadhi Dam section    4.0 2024-01-01\n",
-       "2     Revenue   Tirunelveli                     Oothu   15.0 2024-01-01\n",
-       "3     Revenue   Tirunelveli                 Nalumukku   12.0 2024-01-01\n",
-       "4     Revenue   Tirunelveli                  Manjolai   10.0 2024-01-01\n",
-       "...       ...           ...                       ...    ...        ...\n",
-       "1541  Revenue  Virudhunagar              Virudhunagar    7.0 2024-01-10\n",
-       "1542  Revenue  Virudhunagar       Sivakasi RDO office    6.0 2024-01-10\n",
-       "1543  Revenue  Virudhunagar               Rajapalayam    5.0 2024-01-10\n",
-       "1544  Revenue  Virudhunagar               Kariyapatti    5.0 2024-01-10\n",
-       "1545  Revenue  Virudhunagar           Vembakottai Dam    2.0 2024-01-10\n",
+       "        dept            dist           station  value       date\n",
+       "id                                                              \n",
+       "0    Revenue   Kanniyakumari        Suralacode   31.4 2025-01-01\n",
+       "1    Revenue   Kanniyakumari      Aralvaimozhi    2.0 2025-01-01\n",
+       "2    Revenue    Nagapattinam        Vedaranyam    3.8 2025-01-01\n",
+       "3    Revenue    Nagapattinam      Kodiayakarai    2.6 2025-01-01\n",
+       "4    Revenue  Ramanathapuram    Thangachimadam   24.4 2025-01-01\n",
+       "..       ...             ...               ...    ...        ...\n",
+       "223  Revenue      Tiruvallur    Thamaraipakkam    3.0 2025-01-13\n",
+       "224  Revenue      Tiruvallur        Tiruvallur    3.0 2025-01-13\n",
+       "225  Revenue      Villupuram  RSCL-2 Koliyanur    3.0 2025-01-13\n",
+       "226  Revenue      Villupuram  RSCL-2 Valavanur    3.0 2025-01-13\n",
+       "227  Revenue      Villupuram        Marakkanam    3.0 2025-01-13\n",
        "\n",
-       "[1546 rows x 5 columns]"
+       "[228 rows x 5 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,18 +401,231 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "004580f5-a9b1-4894-942f-377d09297c0d",
+   "execution_count": 62,
+   "id": "c89d28b6-20bf-4a3d-9b48-84ea39be70cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Search_Rain_Fall_Data.to_csv(r\"C:\\Users\\Arunprakash Babu\\OneDrive\\ドキュメント\\GitHub\\Portfolios\\Projects\\Pb5_Rainfall data analysis of TN\\2024_Rainfall_Data.csv\")"
+    "df = pd.read_csv(r\"C:\\Users\\Arunprakash Babu\\OneDrive\\ドキュメント\\GitHub\\Portfolios\\Projects\\Pb5_Rainfall data analysis of TN\\Total_RainFall_Data.csv\",index_col='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "a8480044-92a6-423b-a4a7-3b9592f486ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.date = pd.to_datetime(df.date)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "019b41a7-6ad4-45dd-a727-0f940e41d547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df,Search_Rain_Fall_Data])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "b7b9da97-6107-4326-9eb0-29b9d58189e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "9a2ce56d-0574-468d-983c-a6992579cccf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.index.name = 'id'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "2babb1bc-7a65-4afd-a4de-39e927f2ceaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dept</th>\n",
+       "      <th>dist</th>\n",
+       "      <th>station</th>\n",
+       "      <th>value</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>The Nilgiris</td>\n",
+       "      <td>Devala</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1990-02-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Coimbatore</td>\n",
+       "      <td>Taluk Office, Pollachi</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1990-10-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Coimbatore</td>\n",
+       "      <td>Taluk Office, Pollachi</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>1990-10-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Mayiladuthurai</td>\n",
+       "      <td>Anaikaranchatram (Kollidam)</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1990-10-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Mayiladuthurai</td>\n",
+       "      <td>Sirkali</td>\n",
+       "      <td>12.4</td>\n",
+       "      <td>1990-10-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671952</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>Thamaraipakkam</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671953</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>Tiruvallur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671954</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>RSCL-2 Koliyanur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671955</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>RSCL-2 Valavanur</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>671956</th>\n",
+       "      <td>Revenue</td>\n",
+       "      <td>Villupuram</td>\n",
+       "      <td>Marakkanam</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2025-01-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>671957 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           dept            dist                      station  value       date\n",
+       "id                                                                            \n",
+       "0       Revenue    The Nilgiris                       Devala    5.0 1990-02-13\n",
+       "1       Revenue      Coimbatore       Taluk Office, Pollachi    8.0 1990-10-17\n",
+       "2       Revenue      Coimbatore       Taluk Office, Pollachi   34.0 1990-10-18\n",
+       "3       Revenue  Mayiladuthurai  Anaikaranchatram (Kollidam)   13.0 1990-10-18\n",
+       "4       Revenue  Mayiladuthurai                      Sirkali   12.4 1990-10-18\n",
+       "...         ...             ...                          ...    ...        ...\n",
+       "671952  Revenue      Tiruvallur               Thamaraipakkam    3.0 2025-01-13\n",
+       "671953  Revenue      Tiruvallur                   Tiruvallur    3.0 2025-01-13\n",
+       "671954  Revenue      Villupuram             RSCL-2 Koliyanur    3.0 2025-01-13\n",
+       "671955  Revenue      Villupuram             RSCL-2 Valavanur    3.0 2025-01-13\n",
+       "671956  Revenue      Villupuram                   Marakkanam    3.0 2025-01-13\n",
+       "\n",
+       "[671957 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "85f6d3e1-24f4-4480-b118-9729c5d48dcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(r\"C:\\Users\\Arunprakash Babu\\OneDrive\\ドキュメント\\GitHub\\Portfolios\\Projects\\Pb5_Rainfall data analysis of TN\\Total_RainFall_Data.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e3ec10b-fff7-41c7-94a8-75f47da95cab",
+   "id": "a47e09ca-9518-464f-884c-4677a10e5565",
    "metadata": {},
    "outputs": [],
    "source": []
